--- a/src/main/java/com/qa/hubspot/config/config.properties
+++ b/src/main/java/com/qa/hubspot/config/config.properties
@@ -8,5 +8,5 @@ accountname = naveenautomationlabs
 headless = false
 incognito = false
 
-remote = true
+remote = false
 huburl = http://localhost:4444/wd/hub
